--- a/hacksc_random_app/amplify/backend/backend-config.json
+++ b/hacksc_random_app/amplify/backend/backend-config.json
@@ -1,1 +1,26 @@
-{}
+{
+	"function": {
+		"hackscrandomappe0af7a52": {
+			"service": "Lambda",
+			"providerPlugin": "awscloudformation",
+			"build": true,
+			"dependsOn": []
+		}
+	},
+	"api": {
+		"api9d4f612e": {
+			"service": "API Gateway",
+			"providerPlugin": "awscloudformation",
+			"dependsOn": [
+				{
+					"category": "function",
+					"resourceName": "hackscrandomappe0af7a52",
+					"attributes": [
+						"Name",
+						"Arn"
+					]
+				}
+			]
+		}
+	}
+}
