Switch from pure react-native to expo react-native

--- a/hacksc_random_app/app.json
+++ b/hacksc_random_app/app.json
@@ -1,4 +1,29 @@
 {
-  "name": "hacksc_random_app",
-  "displayName": "hacksc_random_app"
+  "expo": {
+    "name": "HackSC Random App",
+    "slug": "hacksc_random_app",
+    "privacy": "public",
+    "sdkVersion": "32.0.0",
+    "platforms": [
+      "ios",
+      "android"
+    ],
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+    "ios": {
+      "supportsTablet": true
+    }
+  }
 }
