--- a/hacksc_random_app/package.json
+++ b/hacksc_random_app/package.json
@@ -1,7 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "open -a Simulator && expo start",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
@@ -15,7 +15,8 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-navigation": "^3.0.9"
+    "react-native-maps": "^0.24.0",
+    "react-navigation": "^3.8.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
