--- a/hacksc_random_app/app.json
+++ b/hacksc_random_app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "HackSC Random App",
+    "name": "My HackSC App",
     "slug": "hacksc_random_app",
     "privacy": "public",
     "sdkVersion": "32.0.0",
@@ -10,9 +10,9 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/images/splash.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
