--- a/hacksc_random_app/package.json
+++ b/hacksc_random_app/package.json
@@ -15,7 +15,9 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-ios-picker": "^1.0.0",
     "react-native-maps": "^0.24.0",
+    "react-native-select-input-ios": "^2.0.1",
     "react-navigation": "^3.8.1"
   },
   "devDependencies": {
